fix: treat empty recipients as valid event outcome