@@ -228,6 +228,7 @@ public abstract class AbstractEventConsumer
       return;
     }
 
+    // Filter events based on subscription configuration (entity type, conditions, etc.)
     Map<ChangeEvent, Set<UUID>> filteredEvents = getFilteredEvents(eventSubscription, events);
     RecipientResolver resolver = new RecipientResolver();
 
@@ -235,29 +236,38 @@ public abstract class AbstractEventConsumer
       ChangeEvent event = eventWithReceivers.getKey();
       Set<UUID> destinationIds = eventWithReceivers.getValue();
 
+      // Group destinations by type to enable cross-destination recipient deduplication
       Map<SubscriptionType, List<Destination<ChangeEvent>>> destinationsByType =
           groupDestinationsByType(destinationIds);
 
       for (var entry : destinationsByType.entrySet()) {
         List<Destination<ChangeEvent>> destinations = entry.getValue();
-        Destination<ChangeEvent> publisher = destinations.get(0);
+        Destination<ChangeEvent> publisher = destinations.getFirst();
 
+        // Resolve recipients from all destinations of this type for deduplication
         Set<Recipient> recipients = Set.of();
         if (publisher.requiresRecipients()) {
           List<SubscriptionDestination> subDestinations =
               destinations.stream().map(Destination::getSubscriptionDestination).toList();
           recipients = resolver.resolveRecipients(event, subDestinations);
-
-          if (recipients.isEmpty()) {
-            continue;
-          }
         }
 
-        boolean status = sendAlertToRecipients(publisher, event, recipients);
+        // Send via primary destination only, with deduplicated recipients (one send per type)
+        boolean status = true;
+        if (!publisher.requiresRecipients() || !recipients.isEmpty()) {
+          try {
+            publisher.sendMessage(event, recipients);
+          } catch (EventPublisherException e) {
+            LOG.error("Failed to send alert: {}", e.getMessage());
+            handleFailedEvent(e, true);
+            status = false;
+          }
+        }
 
         if (status) {
           // Collect successful events instead of writing immediately
           // Batch write happens in commit() to reduce connection pool contention
+          // Note: Empty recipients is treated as successful (no-op send)
           successfulEvents.add(eventWithReceivers.getKey());
           alertMetrics.withSuccessEvents(alertMetrics.getSuccessEvents() + 1);
         } else {
@@ -274,17 +284,6 @@ public abstract class AbstractEventConsumer
         .filter(Objects::nonNull)
         .filter(Destination::getEnabled)
         .collect(Collectors.groupingBy(dest -> dest.getSubscriptionDestination().getType()));
-  }
-
-  private boolean sendAlertToRecipients(
-      Destination<ChangeEvent> destination, ChangeEvent event, Set<Recipient> recipients) {
-    try {
-      destination.sendMessage(event, recipients);
-      return true;
-    } catch (EventPublisherException e) {
-      LOG.error("Failed to send alert: {}", e.getMessage());
-      return false;
-    }
   }
 
   @Override
